--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,9 +1,16 @@
+* {
+	box-sizing: border-box;
+}
+
 html {
 	font-size: 62.5%;
 }
+
 body {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: $m-size;
+	color: $dark-gray;
+	line-height: 1.6;
 }
 
 button {
@@ -13,6 +20,7 @@ button {
 		cursor: default;
 	}
 }
+
 .isActive {
 	font-weight: bold;
 }
