--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,13 @@
 // Colours
+$dark-gray: #333;
+$gray: #666;
+$blue: #1c88bf;
+$dark-blue: #364051;
+$off-white: #f7f7f7;
+
+// Font Sizes
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 // Spacing
 
